# rlm-explained

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
examples/: CLAUDE.md  quickstart.py
rlm/clients/: CLAUDE.md  __init__.py  base_lm.py  cerebras.py  openai.py
rlm/core/: CLAUDE.md  lm_handler.py  rlm.py  types.py
rlm/environments/: CLAUDE.md  __init__.py  local_repl.py  modal_repl.py  prime_repl.py
rlm/logger/: CLAUDE.md
rlm/utils/: CLAUDE.md  parsing.py
scripts/: setup.py
server/: CLAUDE.md  __init__.py  file_parser.py  main.py  stream_logger.py
server/educational/: __init__.py  annotations.py  enricher.py
tests/: test_parsing.py
visualizer/: CLAUDE.md  package.json  pnpm-lock.yaml
visualizer/public/: CLAUDE.md
visualizer/src/app/: CLAUDE.md  globals.css  layout.tsx
visualizer/src/components/: AsciiGlobe.tsx  BugReportButton.tsx  CLAUDE.md  CodeBlock.tsx  Dashboard.tsx  ExecutionPanel.tsx  FileUploader.tsx  FlowDiagram.tsx  GoogleAnalytics.tsx  IterationTimeline.tsx  LLMSettingsModal.tsx  LiveProcessor.tsx  LocaleSwitcher.tsx  Logo.tsx  MarkdownContent.tsx  PrivacyDisclaimer.tsx  ProcessingModal.tsx  StatsCard.tsx  StoryView.tsx  ThemeToggle.tsx  TrajectoryPanel.tsx
visualizer/src/lib/: CLAUDE.md  parse-logs.ts  types.ts
visualizer/src/lib/i18n/: LocaleContext.tsx  index.ts  useTranslation.ts
visualizer/src/locales/: en.json  es.json  pt.json
